# worldorder

./: .gitignore  Dockerfile.api  LICENSE  README.md  app.py  demo.py  docker-compose.yml  launch.bat  pyproject.toml
agents/: __init__.py  advisor_agent.py  base_agent.py  civilization_dna.py  decision.py  leader_agent.py  memory.py
api/: server.py
cli/: __init__.py  app.py  commands.py  map_ascii.py  renderer.py  tui.py
data/: __init__.py  leader_generator.py  loader.py  mass_loader.py  world_database.py
data/historical/: events.json
data/profiles/countries/: australia.yaml  brazil.yaml  china.yaml  egypt.yaml  eu.yaml  france.yaml  germany.yaml  india.yaml  iran.yaml  israel.yaml  japan.yaml  nigeria.yaml  north_korea.yaml  pakistan.yaml  russia.yaml  saudi.yaml  south_korea.yaml  turkey.yaml  uk.yaml  ukraine.yaml  usa.yaml
data/profiles/leaders/: biden.yaml  erdogan.yaml  eu_leader.yaml  khamenei.yaml  kim.yaml  mbs.yaml  modi.yaml  putin.yaml  xi.yaml  zelensky.yaml
data/scrapers/: news_feed.py  wikipedia.py
engine/: __init__.py  config.py  crisis.py  event_bus.py  future_predictor.py  shadow_powers.py  simulation.py  time_engine.py  war_simulator.py  world_state.py
llm/: __init__.py  base.py  groq.py  ollama.py  openai_provider.py  openrouter.py  prompt_builder.py  registry.py
static/: index.html
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: EventFeed.tsx  LeaderCard.tsx  PowerRankings.tsx  SimulationControls.tsx
web/app/lib/: api.ts
